force-app/main/default/objects/Report_Type__c/Report_Type__c.object-meta.xml
<CustomObject>
    <description>Holds information for the Report Types returned by the DescribeReportInfo API callout</description>
    <label>Report Type</label>
    <nameField>
        <label>Report Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>