force-app/main/default/objects/Report_Type__c/fields/LastDescribed__c.field-meta.xml
<CustomField>
    <fullName>LastDescribed__c</fullName>
    <label>Last Described</label>
    <type>DateTime</type>
</CustomField>