force-app/main/default/objects/Report_Type__c/fields/relatedObjectCount__c.field-meta.xml
<CustomField>
    <fullName>relatedObjectCount__c</fullName>
    <label>Related Objects</label>
    <summaryForeignKey>Report_Type_Object__c.reportTypeId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>